[tool.poetry]
name = "ros-dash-pandas-networkx"
version = "0.1.0"
description = ""
authors = ["jblocher"]

[tool.poetry.dependencies]
python = "^3.10"
rosbags-dataframe = "^0.9.0"
dash = "^2.8.1"
seaborn = "^0.12.2"
termcolor = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
